bord layouts finish

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>JsTrello</title>
 </head>
 <body>
-    <div class="container" id="app"></div>
+    <div class="container" id="app">
+        <header class="header">
+            <div class="header__container">
+                <button class="homeBtn">Home</button>
+            </div>
+        </header>
+        <main class="main">
+            <div class="main__container">
+                <div class="new-border-wrapper">
+                    <button class="newBorder">Add a new border</button>
+                    <div class="newBorderName">
+                        <p>What shall we call the board?</p>
+                        <input type="text" class="borderInput" required>
+                        <div class="btnWrapper">
+                            <button class="cancelBtn">Cancel</button>
+                            <button class="createBtn">Create</button>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="newPlan">
+                    План развития
+                </div>
+                <div class="newPlan">
+                    План развития
+                </div>
+                <div class="newPlan">
+                    План развития
+                </div>
+                <div class="newPlan">
+                    План развития
+                </div>
+                <div class="newPlan">
+                    План развития
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
