trello-logic end

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                     <button class="newBorder">Add a new border</button>
                     <div class="newBorderName">
                         <p>What shall we call the board?</p>
-                        <input type="text" class="borderInput" required>
+                        <input  class="borderInput" required>
                         <div class="btnWrapper">
                             <button class="cancelBtn">Cancel</button>
                             <button class="createBtn">Create</button>
@@ -27,21 +27,6 @@
                     </div>
                 </div>
                 
-                <div class="newPlan">
-                    План развития
-                </div>
-                <div class="newPlan">
-                    План развития
-                </div>
-                <div class="newPlan">
-                    План развития
-                </div>
-                <div class="newPlan">
-                    План развития
-                </div>
-                <div class="newPlan">
-                    План развития
-                </div>
             </div>
         </main>
     </div>
