add and remove finish

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>JsTrello</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
         
         <header class="header">
             <div class="header__container">
-                <button class="homeBtn">Home</button>
+                <button class="TrelloJS">TrelloJS</button>
             </div>
         </header>
         <main class="main">
